--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "build:dev": "BUILD_MODE='development' REACT_APP_ENV=development webpack",
     "build:stg": "BUILD_MODE='production' REACT_APP_ENV=staging webpack",
     "build:prd": "BUILD_MODE='production' REACT_APP_ENV=production webpack",
-    "start:local": "BUILD_MODE='development' REACT_APP_ENV='local' webpack-dev-server",
+    "start:local": "cp -r ./src/assets dist & BUILD_MODE='development' REACT_APP_ENV='local' webpack-dev-server",
     "start:dev": "BUILD_MODE='development' REACT_APP_ENV=development webpack-dev-server",
     "start:stg": "BUILD_MODE='production' REACT_APP_ENV='staging' webpack-dev-server",
-    "start:prd": "BUILD_MODE='production' REACT_APP_ENV='production' webpack-dev-server",
+    "start:prd": "cp -r ./src/assets dist & BUILD_MODE='production' REACT_APP_ENV='production' webpack-dev-server",
     "tsc": "tsc",
     "precommit": "lint-staged"
   },
